--- a/public/components/home/home.view.html
+++ b/public/components/home/home.view.html
@@ -1,3 +1,14 @@
 <section id="home" class="container-fluid">
+  <div class="row">
+    <div class="col-xs-offset-2 col-xs-8" id="hometexts">
+    <div class="col-md-12" id="homeText">
+      <p>Invierta en su futuro</p>
+    </div>
+    <div class="col-md-12" id="homeText1">
+      <p>Somos la empresa líder en el mercado de compra y venta de Bienes raíces</p>
+    </div>
+
+  </div>
+  </div>
 
 </section>
