--- a/public/components/home/home.view.html
+++ b/public/components/home/home.view.html
@@ -6,7 +6,7 @@
       <p>Invierta en su futuro</p>
     </div>
     <div class="col-md-12" id="homeText1">
-      <p>Somos la empresa líder en el mercado de compra y venta de Bienes raíces</p>
+      <p>Somos la empresa líder del mercado en compra y venta de Bienes raíces</p>
     </div>
 
   </div>
