--- a/public/components/includes/navegación.html
+++ b/public/components/includes/navegación.html
@@ -1,10 +1,14 @@
-<div class="nav navbar-nav">
-  <div class="collapse navbar-collapse">
-    <ul id="barraNav" class="nav navbar-nav" >
-      <li><a href="#!/">INICIO</a></li>
-      <li><a href="#!/">REGISTRO</a></li>
-      <li><a href="#!/">PROPIEDADES</a></li>
-      <li><a href="#!/">HISTORIAL</a></li>
-    </ul>
+<section class="row">
+  <div class="col-xs-9 col-sm-12">
+  <div class="nav navbar-nav">
+    <div class="collapse navbar-collapse">
+      <ul id="barraNav" class="nav navbar-nav">
+        <li><a href="#!/">INICIO</a></li>
+        <li><a href="#!/">REGISTRO</a></li>
+        <li><a href="#!/">PROPIEDADES</a></li>
+        <li><a href="#!/">HISTORIAL</a></li>
+      </ul>
+    </div>
   </div>
-</div>
+  </div>
+</section>
