Estilo mensajes error
Se crea el estilo del mensaje de error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@
 #barraNav li a:hover{
 	color: rgb(2, 71, 162);
 }
+/* Mensaje de error */
+#requerido{
+	color: rgb(190, 9, 9);
+	font-size: 0.9em;
+}
 /* Estilos del Home */
 #home{
 background-image: url(../img/home.jpg);
