--- a/public/components/home/home.view.html
+++ b/public/components/home/home.view.html
@@ -1,7 +1,7 @@
 <section id="home" class="container-fluid">
   <div ng-include="'./../components/includes/navegación.html'" scope="" onload=""></div>
   <div class="row">
-    <div class="col-xs-offset-2 col-xs-8" id="hometexts">
+    <div class="col-md-offset-2 col-md-8" id="hometexts">
     <div class="col-md-12" id="homeText">
       <p>Invierta en su futuro</p>
     </div>
