--- a/public/components/includes/navegación.html
+++ b/public/components/includes/navegación.html
@@ -4,8 +4,8 @@
     <div class="collapse navbar-collapse">
       <ul id="barraNav" class="nav navbar-nav">
         <li><a href="#!/">INICIO</a></li>
-        <li><a href="#!/">REGISTRO</a></li>
-        <li><a href="#!/">PROPIEDADES</a></li>
+        <li><a href="#!/regplayer">REGISTRO</a></li>
+        <li><a href="#!/properties">PROPIEDADES</a></li>
         <li><a href="#!/">HISTORIAL</a></li>
       </ul>
     </div>
