faltan stylos y backend
faltan stylos y backend

--- a/public/components/includes/navegación.html
+++ b/public/components/includes/navegación.html
@@ -6,7 +6,7 @@
         <li><a href="#!/">INICIO</a></li>
         <li><a href="#!/regplayer">REGISTRO</a></li>
         <li><a href="#!/properties">PROPIEDADES</a></li>
-        <li><a href="#!/">HISTORIAL</a></li>
+        <li><a href="#!/history">HISTORIAL</a></li>
       </ul>
     </div>
   </div>
