--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,3 +40,72 @@ width: 100%;
   background: rgba(61, 61, 61, 0.7);
   margin-top: 230px;
 }
+#tblTeacher table{
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+#tblTeacher thead, #tblTeacher tbody{
+  width: 100%;
+}
+
+#tblTeacher tbody{
+  text-align: center;
+
+}
+
+#tblTeacher tr th{
+  text-align: center;
+  width: 60px;
+  font-size: 1.143em;
+  font-size: 1.143em;
+  margin: 0 auto;
+  padding: 20px 10px;
+  color: #fff;
+  background-color: #000;
+}
+
+#tblTeacher tr:hover{
+  background: rgba(0, 130, 200,0.1);
+}
+
+#tblTeacher tbody td{
+  text-align: center;
+  margin: 0 auto;
+  padding: 10px 0;
+  width: 60px;
+  margin: 0 auto;
+  border-bottom: 0.1px solid #242629;
+}
+#tblTeacher h3{
+  margin-bottom: 5px;
+  font-size: 1.571em;
+  font-family: 'Montserrat';
+}
+#tblTeacher .editCxlB{
+  background-color: rgba(252, 177, 50, 0.8);
+  color: #fff;
+}
+
+#tblTeacher .editCxlB:not([disabled]):hover {
+  background-color: #fcb132;
+  transition: 0.3s;
+}
+#buttonLogo{
+  margin-top: 15px;
+}
+#regButton{
+  margin-top: 10px;
+}
+#regplayer1{
+  margin-left: 80px;
+  margin-top: 50px;
+}
+
+#btnProcesar{
+  margin-left: 50px;
+  margin-top: 15px;
+}
+#listhistory{
+  margin-top: 50px;
+}
